(chores) camel-support: use unmodifiable list when possible